--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
     "dependencies": {
-        "express":"4.17.1",
-        "express-handlebars":"3.1.0"
+        "express": "4.17.1",
+        "express-handlebars": "3.1.0"
+    },
+    "devDependencies": {
+        "jest": "^25.5.4",
+        "portfinder": "^1.0.28",
+        "puppeteer": "^1.20.0"
+    },
+    "scripts": {
+        "test": "jest"
     }
 }
